[package]
name = "take_home_assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100" # Error handling
thiserror = "2.0.16" # Error handling
csv = "1.3.1" # Tx file processing
serde = { version = "1.0.226", features = ["derive"] } # Tx processing
strum = { version = "0.27", features = ["derive"] } # String/enum processing ergonomics
rand = "0.9.2" # Testing
env_logger = "0.11.8" # Logging
log = "0.4.28" # Logging
tempfile = "3.23.0" # Testing